--- a/HelloToast/app/src/main/res/values/strings.xml
+++ b/HelloToast/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">JAVA MOBILE</string>
+    <string name="app_name">MyWorld</string>
     <string name="halo">Bagaimana Kabar Anda Hari Ini!</string>
     <string name="button_label_input">Bilangan Fibonacci</string>
     <string name="button_label_pro_hello_toast">Project Hello Toast</string>
